--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       Welcome to my Meteo app  
     </h1>
     <footer>
-        Built by Lawrencia Kyei Baffour
+        Built by <a href="https://github.com/Cia-17" target="_blank">Lawrencia Kyei Baffour </a> 
+        and is hosted on <a href="https://github.com/Cia-17/meteo" target="_blank">Github </a> and 
+        hosted on <a href="https://meteo-app-lawrencia.netlify.app/" target="_blank">Netlify</a>
     </footer>
 </body>
 </html>
