--- a/index.html
+++ b/index.html
@@ -6,9 +6,27 @@
     <title>Meteo App</title>
 </head>
 <body>
-    <h1>
-      Welcome to my Meteo app  
+    <header>
+        <form >
+            <input type="search" placeholder="Enter a city..." required>
+            <input type="submit" value="Search">
+        </form>
+    </header>
+    <main>
+        <div>
+        <h1>
+      Paris
     </h1>
+    <p>
+       Wednesday 15:39, moderate rain <br>
+        Humidity: 87%, Wind: 7.2km/h 
+    </p>
+    </div>
+    <div>
+    ☀️ 12℃
+    </main>
+    </div>
+    
     <footer>
         Built by <a href="https://github.com/Cia-17" target="_blank">Lawrencia Kyei Baffour </a> 
         and is hosted on <a href="https://github.com/Cia-17/meteo" target="_blank">Github </a> and 
