--- a/index.html
+++ b/index.html
@@ -3,34 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="src/style.css" />
     <title>Meteo App</title>
 </head>
 <body>
-    <header>
-        <form >
-            <input type="search" placeholder="Enter a city..." required>
-            <input type="submit" value="Search">
-        </form>
-    </header>
-    <main>
+    <div class="weather-app">
+        <header>
+            <form >
+                <input type="search" placeholder="Enter a city..." required>
+                <input type="submit" value="Search">
+            </form>
+        </header>
+        <main>
+            <div>
+            <h1>
+        Paris
+        </h1>
+        <p>
+        Wednesday 15:39, moderate rain <br>
+            Humidity: 87%, Wind: 7.2km/h 
+        </p>
+        </div>
         <div>
-        <h1>
-      Paris
-    </h1>
-    <p>
-       Wednesday 15:39, moderate rain <br>
-        Humidity: 87%, Wind: 7.2km/h 
-    </p>
+        ☀️ 12℃
+        </main>
+        <footer>
+            Built by <a href="https://github.com/Cia-17" target="_blank">Lawrencia Kyei Baffour </a> 
+            and is hosted on <a href="https://github.com/Cia-17/meteo" target="_blank">Github </a> and 
+            hosted on <a href="https://meteo-app-lawrencia.netlify.app/" target="_blank">Netlify</a>
+        </footer>
     </div>
-    <div>
-    ☀️ 12℃
-    </main>
-    </div>
-    
-    <footer>
-        Built by <a href="https://github.com/Cia-17" target="_blank">Lawrencia Kyei Baffour </a> 
-        and is hosted on <a href="https://github.com/Cia-17/meteo" target="_blank">Github </a> and 
-        hosted on <a href="https://meteo-app-lawrencia.netlify.app/" target="_blank">Netlify</a>
-    </footer>
+              
 </body>
 </html>
