--- a/index.html
+++ b/index.html
@@ -12,24 +12,28 @@
 <body>
     <div class="weather-app">
         <header>
-            <form >
-                <input type="search" placeholder="Enter a city..." required>
-                <input type="submit" value="Search">
+            <form class="search-form">
+                <input type="search" placeholder="Enter a city..." required class="search-form-input">
+                <input type="submit" value="Search" class="search-form-button">
             </form>
         </header>
+        
         <main>
+            <div class="weather-app-data">
             <div>
-            <h1>
-        Paris
-        </h1>
-        <p>
-        Wednesday 15:39, moderate rain <br>
-            Humidity: 87%, Wind: 7.2km/h 
-        </p>
+                <h1 class="weather-app-city">Paris</h1>
+                <p class="weather-app-details">
+                Wednesday 15:39, moderate rain <br>
+                Humidity: <strong> 87% </strong>, Wind: <strong> 7.2km/h </strong>
+                </p>
+            </div>
+            <div class="weather-app-temperature-container">  
+                <div class="weather-app-icon">☀️</div> 
+                <div class="weather-app-temperature">12</div> 
+                <div class="weather-app-unit"> ℃ </div></div>
         </div>
-        <div>
-        ☀️ 12℃
         </main>
+
         <footer>
             Built by <a href="https://github.com/Cia-17" target="_blank">Lawrencia Kyei Baffour </a> 
             and is hosted on <a href="https://github.com/Cia-17/meteo" target="_blank">Github </a> and 
