--- a/index.html
+++ b/index.html
@@ -12,16 +12,23 @@
 <body>
     <div class="weather-app">
         <header>
-            <form class="search-form">
-                <input type="search" placeholder="Enter a city..." required class="search-form-input">
-                <input type="submit" value="Search" class="search-form-button">
+            <form class="search-form" id="search-form">
+                <input type="search" 
+                placeholder="Enter a city..." 
+                required 
+                class="search-form-input"
+                id="search-form-input">
+                <input 
+                type="submit" 
+                value="Search" 
+                class="search-form-button">
             </form>
         </header>
         
         <main>
             <div class="weather-app-data">
             <div>
-                <h1 class="weather-app-city">Paris</h1>
+                <h1 class="weather-app-city" id="weather-app-city">Paris</h1>
                 <p class="weather-app-details">
                 Wednesday 15:39, moderate rain <br>
                 Humidity: <strong> 87% </strong>, Wind: <strong> 7.2km/h </strong>
@@ -40,6 +47,7 @@
             hosted on <a href="https://meteo-app-lawrencia.netlify.app/" target="_blank">Netlify</a>
         </footer>
     </div>
-              
+        <script src="src/index.js"></script>
+
 </body>
 </html>
