--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <main>
             <div class="weather-app-data">
             <div>
-                <h1 class="weather-app-city" id="weather-app-city">Paris</h1>
+                <h1 class="weather-app-city" id="weather-app-city"></h1>
                 <p class="weather-app-details">
                 Wednesday 15:39, moderate rain <br>
                 Humidity: <strong> 87% </strong>, Wind: <strong> 7.2km/h </strong>
@@ -37,7 +37,7 @@
             </div>
             <div class="weather-app-temperature-container">  
                 <div class="weather-app-icon">☀️</div> 
-                <div class="weather-app-temperature">12</div> 
+                <div class="weather-app-temperature" id="temperature"></div> 
                 <div class="weather-app-unit"> ℃ </div></div>
         </div>
         </main>
