--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <div>
                 <h1 class="weather-app-city" id="weather-app-city"></h1>
                 <p class="weather-app-details">
-                Wednesday 15:39, moderate rain <br>
-                Humidity: <strong> 87% </strong>, Wind: <strong> 7.2km/h </strong>
+              <span id="time"></span>, <span id="description"> </span><br>
+                Humidity: <strong id="humidity"></strong>, Wind: <strong id="wind-speed"> </strong>
                 </p>
             </div>
             <div class="weather-app-temperature-container">  
