--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 Humidity: <strong id="humidity"></strong>, Wind: <strong id="wind-speed"> </strong>
                 </p>
             </div>
-            <div class="weather-app-temperature-container">  
-                <div class="weather-app-icon">☀️</div> 
+            <div class="weather-app-temperature-container"> 
+                <div id="icon"></div> 
                 <div class="weather-app-temperature" id="temperature"></div> 
                 <div class="weather-app-unit"> ℃ </div></div>
         </div>
